         PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
         Yuan-Yu, xiki-tempula, HTian1997, Iv-Hristov, hmacdope, AnshulAngaria,
         ss62171, Luthaf, yuxuanzhuang, abhishandy, mlnance, shfrz, orbeckst,
         wvandertoorn, cbouy, AmeyaHarmalkar, Oscuro-Phoenix, andrrizzi

  * 0.21.0

Fixes
  * `PDBWriter` skips `CRYST1` record when `u.dimensions` is 
    `None` (Issue #2679, PR #2685)
  * Fixed retrieval of auxiliary information after getting the last timestep
    of the trajectory (Issue #2674, PR #2683).
  * n_components correctly selects PCA components (Issue #2623)
  * Use internal residue indices instead of resids for similarity and connectivity
    selections (Issues #2669 and #2672, PR #2673)
  * Checks for cryo-em 1 A^3 default CRYST1 record, 
    disabling setting of box dimensions if found (Issue #2599)
  * mdamath.angles now returns np.pi instead of -np.pi in cases of
    lower bound roundoff errors. (Issue #2632, PR #2634)
  * Proper error message for AlignTraj on trajectory without mass (Issue #2469)
  * Updated tests to have explicit fixtures (Issue #2618)
  * XDR offsets now read from trajectory if offsets file read-in fails on
    IOError (Issue #1893, PR #2611)
  * Fixed the deprecation warning from `collections` library in `flatten_dict`
    (Issue #2605)
  * Fixed test for the `save_paths` and `load` methods of :class:`PSAnalysis`
    (Issue #2593)
  * Fixes outdated :class:`TRJReader` documentation on random frame access
    (Issue #2398)
  * Fixed mda.Merge for Universes without coordinates (Issue #2470)(PR #2580)
  * PCA(align=True) now correctly aligns the trajectory and computes the
    correct means and covariance matrix (Issue #2561)
  * Correct args order of base.AnalysisFromFunction (Issue #2503)
  * encore.dres() returns dimensionality reduction details instead of a
    reference to itself (Issue #2471)
  * Handle exception when PDBWriter is trying to remove an invalid StringIO
    (Issue #2512)